--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,700&display=swap");
+
 @tailwind base;
 
 @tailwind components;
