--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4794,6 +4794,110 @@ video {
   height: 1px;
 }
 
+.h-1\/2{
+  height: 50%;
+}
+
+.h-1\/3{
+  height: 33.333333%;
+}
+
+.h-2\/3{
+  height: 66.666667%;
+}
+
+.h-1\/4{
+  height: 25%;
+}
+
+.h-2\/4{
+  height: 50%;
+}
+
+.h-3\/4{
+  height: 75%;
+}
+
+.h-1\/5{
+  height: 20%;
+}
+
+.h-2\/5{
+  height: 40%;
+}
+
+.h-3\/5{
+  height: 60%;
+}
+
+.h-4\/5{
+  height: 80%;
+}
+
+.h-1\/6{
+  height: 16.666667%;
+}
+
+.h-2\/6{
+  height: 33.333333%;
+}
+
+.h-3\/6{
+  height: 50%;
+}
+
+.h-4\/6{
+  height: 66.666667%;
+}
+
+.h-5\/6{
+  height: 83.333333%;
+}
+
+.h-1\/12{
+  height: 8.333333%;
+}
+
+.h-2\/12{
+  height: 16.666667%;
+}
+
+.h-3\/12{
+  height: 25%;
+}
+
+.h-4\/12{
+  height: 33.333333%;
+}
+
+.h-5\/12{
+  height: 41.666667%;
+}
+
+.h-6\/12{
+  height: 50%;
+}
+
+.h-7\/12{
+  height: 58.333333%;
+}
+
+.h-8\/12{
+  height: 66.666667%;
+}
+
+.h-9\/12{
+  height: 75%;
+}
+
+.h-10\/12{
+  height: 83.333333%;
+}
+
+.h-11\/12{
+  height: 91.666667%;
+}
+
 .h-full{
   height: 100%;
 }
@@ -19551,6 +19655,110 @@ video {
 
   .sm\:h-px{
     height: 1px;
+  }
+
+  .sm\:h-1\/2{
+    height: 50%;
+  }
+
+  .sm\:h-1\/3{
+    height: 33.333333%;
+  }
+
+  .sm\:h-2\/3{
+    height: 66.666667%;
+  }
+
+  .sm\:h-1\/4{
+    height: 25%;
+  }
+
+  .sm\:h-2\/4{
+    height: 50%;
+  }
+
+  .sm\:h-3\/4{
+    height: 75%;
+  }
+
+  .sm\:h-1\/5{
+    height: 20%;
+  }
+
+  .sm\:h-2\/5{
+    height: 40%;
+  }
+
+  .sm\:h-3\/5{
+    height: 60%;
+  }
+
+  .sm\:h-4\/5{
+    height: 80%;
+  }
+
+  .sm\:h-1\/6{
+    height: 16.666667%;
+  }
+
+  .sm\:h-2\/6{
+    height: 33.333333%;
+  }
+
+  .sm\:h-3\/6{
+    height: 50%;
+  }
+
+  .sm\:h-4\/6{
+    height: 66.666667%;
+  }
+
+  .sm\:h-5\/6{
+    height: 83.333333%;
+  }
+
+  .sm\:h-1\/12{
+    height: 8.333333%;
+  }
+
+  .sm\:h-2\/12{
+    height: 16.666667%;
+  }
+
+  .sm\:h-3\/12{
+    height: 25%;
+  }
+
+  .sm\:h-4\/12{
+    height: 33.333333%;
+  }
+
+  .sm\:h-5\/12{
+    height: 41.666667%;
+  }
+
+  .sm\:h-6\/12{
+    height: 50%;
+  }
+
+  .sm\:h-7\/12{
+    height: 58.333333%;
+  }
+
+  .sm\:h-8\/12{
+    height: 66.666667%;
+  }
+
+  .sm\:h-9\/12{
+    height: 75%;
+  }
+
+  .sm\:h-10\/12{
+    height: 83.333333%;
+  }
+
+  .sm\:h-11\/12{
+    height: 91.666667%;
   }
 
   .sm\:h-full{
@@ -34313,6 +34521,110 @@ video {
     height: 1px;
   }
 
+  .md\:h-1\/2{
+    height: 50%;
+  }
+
+  .md\:h-1\/3{
+    height: 33.333333%;
+  }
+
+  .md\:h-2\/3{
+    height: 66.666667%;
+  }
+
+  .md\:h-1\/4{
+    height: 25%;
+  }
+
+  .md\:h-2\/4{
+    height: 50%;
+  }
+
+  .md\:h-3\/4{
+    height: 75%;
+  }
+
+  .md\:h-1\/5{
+    height: 20%;
+  }
+
+  .md\:h-2\/5{
+    height: 40%;
+  }
+
+  .md\:h-3\/5{
+    height: 60%;
+  }
+
+  .md\:h-4\/5{
+    height: 80%;
+  }
+
+  .md\:h-1\/6{
+    height: 16.666667%;
+  }
+
+  .md\:h-2\/6{
+    height: 33.333333%;
+  }
+
+  .md\:h-3\/6{
+    height: 50%;
+  }
+
+  .md\:h-4\/6{
+    height: 66.666667%;
+  }
+
+  .md\:h-5\/6{
+    height: 83.333333%;
+  }
+
+  .md\:h-1\/12{
+    height: 8.333333%;
+  }
+
+  .md\:h-2\/12{
+    height: 16.666667%;
+  }
+
+  .md\:h-3\/12{
+    height: 25%;
+  }
+
+  .md\:h-4\/12{
+    height: 33.333333%;
+  }
+
+  .md\:h-5\/12{
+    height: 41.666667%;
+  }
+
+  .md\:h-6\/12{
+    height: 50%;
+  }
+
+  .md\:h-7\/12{
+    height: 58.333333%;
+  }
+
+  .md\:h-8\/12{
+    height: 66.666667%;
+  }
+
+  .md\:h-9\/12{
+    height: 75%;
+  }
+
+  .md\:h-10\/12{
+    height: 83.333333%;
+  }
+
+  .md\:h-11\/12{
+    height: 91.666667%;
+  }
+
   .md\:h-full{
     height: 100%;
   }
@@ -49071,6 +49383,110 @@ video {
 
   .lg\:h-px{
     height: 1px;
+  }
+
+  .lg\:h-1\/2{
+    height: 50%;
+  }
+
+  .lg\:h-1\/3{
+    height: 33.333333%;
+  }
+
+  .lg\:h-2\/3{
+    height: 66.666667%;
+  }
+
+  .lg\:h-1\/4{
+    height: 25%;
+  }
+
+  .lg\:h-2\/4{
+    height: 50%;
+  }
+
+  .lg\:h-3\/4{
+    height: 75%;
+  }
+
+  .lg\:h-1\/5{
+    height: 20%;
+  }
+
+  .lg\:h-2\/5{
+    height: 40%;
+  }
+
+  .lg\:h-3\/5{
+    height: 60%;
+  }
+
+  .lg\:h-4\/5{
+    height: 80%;
+  }
+
+  .lg\:h-1\/6{
+    height: 16.666667%;
+  }
+
+  .lg\:h-2\/6{
+    height: 33.333333%;
+  }
+
+  .lg\:h-3\/6{
+    height: 50%;
+  }
+
+  .lg\:h-4\/6{
+    height: 66.666667%;
+  }
+
+  .lg\:h-5\/6{
+    height: 83.333333%;
+  }
+
+  .lg\:h-1\/12{
+    height: 8.333333%;
+  }
+
+  .lg\:h-2\/12{
+    height: 16.666667%;
+  }
+
+  .lg\:h-3\/12{
+    height: 25%;
+  }
+
+  .lg\:h-4\/12{
+    height: 33.333333%;
+  }
+
+  .lg\:h-5\/12{
+    height: 41.666667%;
+  }
+
+  .lg\:h-6\/12{
+    height: 50%;
+  }
+
+  .lg\:h-7\/12{
+    height: 58.333333%;
+  }
+
+  .lg\:h-8\/12{
+    height: 66.666667%;
+  }
+
+  .lg\:h-9\/12{
+    height: 75%;
+  }
+
+  .lg\:h-10\/12{
+    height: 83.333333%;
+  }
+
+  .lg\:h-11\/12{
+    height: 91.666667%;
   }
 
   .lg\:h-full{
@@ -63833,6 +64249,110 @@ video {
     height: 1px;
   }
 
+  .xl\:h-1\/2{
+    height: 50%;
+  }
+
+  .xl\:h-1\/3{
+    height: 33.333333%;
+  }
+
+  .xl\:h-2\/3{
+    height: 66.666667%;
+  }
+
+  .xl\:h-1\/4{
+    height: 25%;
+  }
+
+  .xl\:h-2\/4{
+    height: 50%;
+  }
+
+  .xl\:h-3\/4{
+    height: 75%;
+  }
+
+  .xl\:h-1\/5{
+    height: 20%;
+  }
+
+  .xl\:h-2\/5{
+    height: 40%;
+  }
+
+  .xl\:h-3\/5{
+    height: 60%;
+  }
+
+  .xl\:h-4\/5{
+    height: 80%;
+  }
+
+  .xl\:h-1\/6{
+    height: 16.666667%;
+  }
+
+  .xl\:h-2\/6{
+    height: 33.333333%;
+  }
+
+  .xl\:h-3\/6{
+    height: 50%;
+  }
+
+  .xl\:h-4\/6{
+    height: 66.666667%;
+  }
+
+  .xl\:h-5\/6{
+    height: 83.333333%;
+  }
+
+  .xl\:h-1\/12{
+    height: 8.333333%;
+  }
+
+  .xl\:h-2\/12{
+    height: 16.666667%;
+  }
+
+  .xl\:h-3\/12{
+    height: 25%;
+  }
+
+  .xl\:h-4\/12{
+    height: 33.333333%;
+  }
+
+  .xl\:h-5\/12{
+    height: 41.666667%;
+  }
+
+  .xl\:h-6\/12{
+    height: 50%;
+  }
+
+  .xl\:h-7\/12{
+    height: 58.333333%;
+  }
+
+  .xl\:h-8\/12{
+    height: 66.666667%;
+  }
+
+  .xl\:h-9\/12{
+    height: 75%;
+  }
+
+  .xl\:h-10\/12{
+    height: 83.333333%;
+  }
+
+  .xl\:h-11\/12{
+    height: 91.666667%;
+  }
+
   .xl\:h-full{
     height: 100%;
   }
@@ -78591,6 +79111,110 @@ video {
 
   .xxl\:h-px{
     height: 1px;
+  }
+
+  .xxl\:h-1\/2{
+    height: 50%;
+  }
+
+  .xxl\:h-1\/3{
+    height: 33.333333%;
+  }
+
+  .xxl\:h-2\/3{
+    height: 66.666667%;
+  }
+
+  .xxl\:h-1\/4{
+    height: 25%;
+  }
+
+  .xxl\:h-2\/4{
+    height: 50%;
+  }
+
+  .xxl\:h-3\/4{
+    height: 75%;
+  }
+
+  .xxl\:h-1\/5{
+    height: 20%;
+  }
+
+  .xxl\:h-2\/5{
+    height: 40%;
+  }
+
+  .xxl\:h-3\/5{
+    height: 60%;
+  }
+
+  .xxl\:h-4\/5{
+    height: 80%;
+  }
+
+  .xxl\:h-1\/6{
+    height: 16.666667%;
+  }
+
+  .xxl\:h-2\/6{
+    height: 33.333333%;
+  }
+
+  .xxl\:h-3\/6{
+    height: 50%;
+  }
+
+  .xxl\:h-4\/6{
+    height: 66.666667%;
+  }
+
+  .xxl\:h-5\/6{
+    height: 83.333333%;
+  }
+
+  .xxl\:h-1\/12{
+    height: 8.333333%;
+  }
+
+  .xxl\:h-2\/12{
+    height: 16.666667%;
+  }
+
+  .xxl\:h-3\/12{
+    height: 25%;
+  }
+
+  .xxl\:h-4\/12{
+    height: 33.333333%;
+  }
+
+  .xxl\:h-5\/12{
+    height: 41.666667%;
+  }
+
+  .xxl\:h-6\/12{
+    height: 50%;
+  }
+
+  .xxl\:h-7\/12{
+    height: 58.333333%;
+  }
+
+  .xxl\:h-8\/12{
+    height: 66.666667%;
+  }
+
+  .xxl\:h-9\/12{
+    height: 75%;
+  }
+
+  .xxl\:h-10\/12{
+    height: 83.333333%;
+  }
+
+  .xxl\:h-11\/12{
+    height: 91.666667%;
   }
 
   .xxl\:h-full{
